[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls-pemfile = "2.2.0"
once_cell = "1.17"
mio = { version = "1.0.2", features = ["os-poll", "net"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
] }

[features]
default = ["tls"]
tls = []
